# web3-threat-indicators

./: .gitignore  pyproject.toml
.github/: CHANGELOG.md  README.md  TODO.md
ioseeth/: __init__.py  __utils.py  utils.py
ioseeth/data/: chains.json
ioseeth/data/abi/ERC20/: ERC20.json
ioseeth/data/abi/interfaces/: IERC777.json  IUniswapV3Pool.json
ioseeth/data/abi/token/ERC721/: ERC721.json
ioseeth/indicators/: batch.py  events.py  generic.py  metamorphism.py  proxy.py  redpill.py  token.py  wordlists.py
ioseeth/metrics/: generic.py
ioseeth/metrics/batch/: airdrop.py  batch.py  ft.py  native.py  nft.py  token.py
ioseeth/metrics/evasion/: morphing.py  redirection.py
ioseeth/metrics/evasion/morphing/: logic_bomb.py  metamorphism.py
ioseeth/metrics/normal/: proxy.py
ioseeth/parsing/: abi.py  balances.py  bytecode.py  chains.py  events.py  inputs.py
ioseeth/scraping/: bytecode.py
tests/: test_data.py  test_utils.py
tests/indicators/: test_batch.py  test_generic.py  test_proxy.py  test_redpill.py  test_token.py  test_wordlists.py
tests/metrics/: test_probabilities.py
tests/metrics/batch/: test_airdrop.py  test_batch.py  test_token.py
tests/metrics/evasion/: test_morphing.py
tests/metrics/normal/: test_bridge.py  test_dex.py  test_pool.py  test_proxy.py  test_token.py
tests/parsing/: test_abi.py  test_balances.py  test_bytecode.py  test_events.py  test_inputs.py
