[tool.poetry]
name = "ioseeth"
version = "0.1.13"
description = "Utilities to parse blockchain data and look for threat indicators"
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4"
web3 = ">=5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
forta-agent = ">=0.1.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
